--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">LuveraProject</string>
-    <string name="welcome_name">Welcome, Name!</string>
+    <string name="welcome_name">Welcome, Sekar!</string>
     <string name="cari_apa">Cari apa?</string>
     <string name="best_sellers">Best Sellers!</string>
     <string name="makeup">Makeup</string>
@@ -25,4 +25,8 @@
     <string name="password">Password</string>
     <string name="register">Register</string>
     <string name="already_have_account">Already have an account? Log In</string>
+    <string name="welcome">Welcome!</string>
+    <string name="sekar">Sekar</string>
+    <string name="emailsekar">sekar@gmail.com</string>
+    <string name="noHp">081234567890</string>
 </resources>
